// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/HelpPopover renders correctly 1`] = `
<OverlayWrapper
  attachmentConstraint="together"
  behavior="click"
  horizontalAttachment="center"
  isConstrainedToScreen={true}
  onHide={[Function]}
  overlay={
    <Popover
      padding="default"
      title="I am a popover title!"
    >
      I am a popover description.
    </Popover>
  }
  shouldHideOnClick={true}
  testSection="help-popover"
  verticalAttachment="top"
>
  <ButtonIcon
    className="cursor--pointer push-half--left"
    data-test-section="help-popover-icon"
    iconName="help"
    iconSize="medium"
    onClick={[Function]}
    size="medium"
    style="plain"
    title="Help"
  />
</OverlayWrapper>
`;

exports[`components/HelpPopover should show the popover when button is focused 1`] = `
<HelpPopover
  behavior="hover"
  iconSize="medium"
  isConstrainedToScreen={true}
  testSection="help-popover"
>
  <OverlayWrapper
    attachmentConstraint="together"
    behavior="hover"
    horizontalAttachment="center"
    isConstrainedToScreen={true}
    onHide={[Function]}
    overlay={
      <Popover
        padding="default"
      >
        Hello! This is a short popover with no title, just the defaults.
      </Popover>
    }
    shouldHideOnClick={true}
    testSection="help-popover"
    verticalAttachment="top"
  >
    <div
      data-oui-component={true}
      data-test-section="help-popover"
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <div
        className="click-area"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        style={
          Object {
            "display": "inline-block",
          }
        }
      >
        <ButtonIcon
          className="cursor--pointer push-half--left"
          data-test-section="help-popover-icon"
          iconName="help"
          iconSize="medium"
          onClick={[Function]}
          size="medium"
          style="plain"
          title="Help"
        >
          <button
            className="oui-button oui-button-icon oui-button-icon__medium oui-button--plain"
            data-oui-component={true}
            onClick={[Function]}
            title="Help"
          >
            <Icon
              name="help"
              size="medium"
            >
              <svg
                className="oui-icon display--inline oui-icon--16"
                data-oui-component={true}
                fill="currentColor"
                height="16"
                name="help"
                stroke="none"
                style={
                  Object {
                    "fill": "currentColor",
                    "stroke": "none",
                  }
                }
                viewBox="0 0 24 24"
                width="16"
              >
                <desc>
                  icon
                </desc>
                <path
                  d="M11.936 24C5.354 24 0 18.626 0 12.021 0 5.393 5.354 0 11.936 0 18.588 0 24 5.383 24 12s-5.412 12-12.064 12zm0-23C5.905 1 1 5.943 1 12.021 1 18.074 5.905 23 11.936 23 18.036 23 23 18.065 23 12S18.036 1 11.936 1z"
                  key="path-0"
                />
                <path
                  d="M10.458 13.336c0-2.457 3.24-2.698 3.24-4.409 0-.786-.623-1.45-1.912-1.45-1.249 0-2.134.543-2.799 1.409l-1.37-1.51c1.028-1.268 2.577-1.993 4.391-1.993 2.538 0 4.088 1.349 4.088 3.161 0 2.98-3.585 3.222-3.585 5.014 0 .321.163.705.444.905l-1.791.605c-.484-.463-.706-1.068-.706-1.732zm.02 4.47c0-.744.643-1.388 1.409-1.388.764 0 1.409.644 1.409 1.388 0 .765-.646 1.43-1.409 1.43-.766 0-1.409-.665-1.409-1.43z"
                  key="path-1"
                />
              </svg>
            </Icon>
          </button>
        </ButtonIcon>
      </div>
      <div
        style={
          Object {
            "display": "block",
          }
        }
      >
        <Popover
          padding="default"
        >
          <div
            className="oui-pop--over"
            data-oui-component={true}
            style={
              Object {
                "display": "block",
                "opacity": 1,
                "position": "initial",
              }
            }
          >
            <div
              className="oui-pop--over__content"
            >
              Hello! This is a short popover with no title, just the defaults.
            </div>
          </div>
        </Popover>
      </div>
    </div>
  </OverlayWrapper>
</HelpPopover>
`;
